fixed some spacing things

--- a/climbtime/styles/styles.css
+++ b/climbtime/styles/styles.css
@@ -11,6 +11,7 @@
 body{
     margin:0;
     font-family: 'Open Sans', sans-serif;
+    line-height: 1.5em;
 }
 
 #boulder-def{
@@ -29,8 +30,8 @@ body{
 footer{
     display: flex;
     background-color: var(--secondary-color);
-    margin-top: 20px;
-    height: 60px;
+    margin-top: 100px;
+    height: 120px;
     align-items:center;
     justify-content: center;
 }
@@ -46,13 +47,17 @@ h2{
     
 }
 
+
 .hero-img{
+    
+    filter: grayscale(100%);
     grid-column: 1/13;
     grid-row:1/2;
     height:100%;
     width:100%;
     aspect-ratio: 16/9;
     object-fit: cover;
+    z-index: 1;
 }
 
 .hero-title{
@@ -65,7 +70,8 @@ h2{
     width:100%;
     align-items: center;
     justify-items: center;
-    color:var(--accent3-color)
+    color:var(--accent3-color);
+    z-index:2;
 }
 
 #history-img{
@@ -128,21 +134,26 @@ main{
     max-width:1200px;
     margin:auto;
     grid-template-columns: repeat(12,1fr);
-    gap:20px;
+    gap:40px;
+}
+
+#mountain-project{
+    grid-column: 1/13;
 }
 
 nav{
     background-color: var(--secondary-color);
-    height:80px;
+    height:120px;
     display:flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 nav a, footer a{
+    box-sizing: border-box;
     text-decoration: none;
     color: var(--accent3-color);
-    padding:0 30px;
+    padding:20px 50px;
     display:flex;
     justify-content: center;
     align-items: center;
